Nano.Azure.Kubernetes/.kubernetes/network-policy-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-to-namespace
  namespace: %KUBERNETES_NAMESPACE%
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
