Nano.Azure.Kubernetes/.kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: %APP_NAME%-default-policy
  namespace: %KUBERNETES_NAMESPACE%
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: %KUBERNETES_NAMESPACE%
        - ipBlock:
            cidr: %ALB_SUBNET_CIDR%
